Fix tab link spacing issue by dropping old sticky navbar css hack

--- a/src/root/static/css/hydra.css
+++ b/src/root/static/css/hydra.css
@@ -33,12 +33,6 @@ span:target > span.dep-tree-line {
     font-weight: bold;
 }
 
-:target {
-    padding-top: 40px;
-    margin-top: -40px;
-    display: inline-block; /* required for webkit browsers */
-}
-
 span.disabled-project, span.disabled-jobset, span.disabled-job {
     text-decoration: line-through;
 }
